--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
                   echo $$migration_file;
                   psql -U postgres -h postgres-db -p 5432  -d telegram_records -f $$migration_file;
                 done
+    restart: on-failure
 
   telegram-bot:
     image: antontat/telegram_bot:latest
@@ -50,3 +51,4 @@ services:
       - DATABASE_PASSWORD=postgres1!
       - DATABASE_NAME=telegram_records
       - TELEGRAM_BOT_TOKEN=TELEGRAM_TOKEN
+    restart: unless-stopped
